--- a/content/contacto/index.Rmd
+++ b/content/contacto/index.Rmd
@@ -4,7 +4,7 @@ title: "Contacto"
 
 ### Horas de reunión
 
-- Inscribirse abajo para horarios de oficina Jueves en la tarde, una vez inscrito no es necesario enviar correo ni confirmar. Las reuniones online son en [Meet](https://meet.google.com/yan-ghpc-yge)
+- Inscribirse abajo para horarios de oficina, miércoles en la tarde y viernes en la mañana. Realizada la inscripción no es necesario enviar correo ni confirmar. Las reuniones pueden ser presenciales u online, en este último caso en [Meet, link: bit.ly/reuniones-jc](https://bit.ly/reuniones-jc)
 
 
 <!-- Calendly inline widget begin -->
