--- a/content/publication/academic-publications.bib
+++ b/content/publication/academic-publications.bib
@@ -704,11 +704,15 @@
   title = {Social Cohesion and Attitudinal Changes towards Migration: A Longitudinal Perspective amid the COVID-19 Pandemic},
   author = {Castillo, Juan-Carlos and Bonhomme, Macarena and Miranda, Daniel and Iturra, Julio},
   year = {2022},
-  journal = {Trabajo en progreso},
+  journal = {Aceptado en  Frontiers},
   abstract = {The COVID-19 pandemic has impacted social interactions and coexistence around the globe in dimensions that go far beyond health issues. In the case of the Global South, the pandemic has developed along with growing migratory flows, generating actual and potential threats to social cohesion. In effect, migrants have historically served as ‘scapegoats’ for unexpected crises as a way to control and manage diversity. Chile is nowadays one of the main destination focus for migration in the Latin American region, where recently certain COVID-19 outbreaks in migrant housing have intensified discrimination. In such a context, there is a need for understanding how the pandemic has potentially changed the way local nationals perceive migrant neighbors in terms of a threat to national identity, labor market participation and conviviality. Drawing on the national social cohesion panel survey study ELSOC (2016-2021, N= 2927) the main aim of this paper is to analyze the changes in attitudes towards migrants over the last years and their relation with individual status and territorial factors. The results indicate that Chileans perceive Latin American and Caribbean migrants more negatively after the pandemic, particularly those respondents with lower educational levels and who live in increasingly multicultural neighborhoods with higher rates of migrant residents},
   copyright = {add rights},
   lccn = {add call number},
-  annotation = {---}
+  annotation = {- icon: osf   icon\_pack: ai   name: Pre-registration   web: https://osf.io/7mspb
+
+- icon: github   icon\_pack: fab   name: Github   web: https://github.com/jciturras/frontiers-cohesion
+
+---}
 }
 
 @article{castillo_son_2012,
@@ -836,7 +840,7 @@
 }
 
 @article{garcia-castro_perceived_2022,
-  title = {Perceived Economic Ineuquality Measures: Their Reflection on Objective Inequalities and Their Effects on Support for Redistribution},
+  title = {Perceived Economic Inequality Measures: Their Reflection on Objective Inequalities and Their Effects on Support for Redistribution},
   author = {{García-Castro}, Juan Diego and {García-Sánchez}, Efraín and Willis, Guillermo B. and Castillo, Juan-Carlos and {Rodríguez-Bailón}, Rosa},
   year = {2022},
   month = oct,
@@ -1224,4 +1228,3 @@
   annotation = {---},
   file = {/home/juank/Dropbox/zoterojcydocs/storage/6RZRWA58/S0049089X15000538.html}
 }
-
