--- a/content/docencia/desarrollo-tesis/index.Rmd
+++ b/content/docencia/desarrollo-tesis/index.Rmd
@@ -1,9 +1,11 @@
 ---
-title: "Guía de memorias, seminarios y tesis"
+title: "Guía de memorias y tesis"
 author: " "
+# Date published
+date: "2019-03-01" 
 ---
 
-La guía de seminarios/memorias/tesis es una actividad de acompañamiento semestral que incluye:
+La guía de seminarios de grado/memorias/tesis es una actividad de acompañamiento semestral que incluye:
 
 - asistencia y presentación en el [Coloquio de Investigación en Desigualdad y Ciudadanía](/post/coloquio/). Parte central de la elaboración de trabajos de investigación es aprender de cómo presentan su trabajo otr_s investigadores, las preguntas que surgen del público, los comentarios y la defensa de los argumentos, y la retroalimentación al presentar
 
