cambios desde vsc

--- a/content/tesis/tesis.bib
+++ b/content/tesis/tesis.bib
@@ -81,6 +81,23 @@ Tomando en cuenta el objetivo general de esta investigación mencionado con ante
 {$<$}iframe src="https://www.dropbox.com/s/deuxlftbcst5khk/Entrega\%20Final\%20Francisca\%20Castro\_backup.pdf?raw=1" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
 }
 
+@phdthesis{cortinez_efecto_2022,
+  type = {Licenciatura En Sociología},
+  title = {El Efecto de Las Creencias Meritocráticas Sobre Las Atribuciones de Pobreza y Riqueza},
+  author = {Cortinez, Sebastian},
+  year = {2022},
+  address = {Santiago de Chile},
+  school = {Departamento de Sociología, Facultad de Ciencias Sociales, Universidad de Chile},
+  keywords = {Guía o cotutor},
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: graduation-cap   icon\_pack: fa   name: Prof. Guía   web: /tag/guia-o-cotutor/ - icon: file   icon\_pack: fa   name: Documento   web: https://sebacr.github.io/tesispregrado/ - icon: file   icon\_pack: fab   name: github   web: https://github.com/sebacr/tesispregrado
+
+--- \# Resumen
+
+Las investigaciones sociológicas que analizan las causas de las atribuciones de pobreza y riqueza -esto es, cómo se explican las causas de la pobreza y la riqueza- suelen hacerlo desde la hipótesis de que existe como motivación de base un interés racional, y se le relaciona con el mérito sin contar con el respaldo de un trabajo empírico. Luego de grandes transformaciones económicas, políticas y socioculturales, hoy se evidencia en Chile un fuerte discurso meritocrático por parte de autoridades como también en la población en general. Por ello, se torna relevante la pregunta de ¿Cómo se relacionan las creencias meritocráticas con las atribuciones de pobreza y riqueza en Chile? La agenda liberal de justicia de mercado afirma que la igualdad de oportunidades a partir de mecanismos meritocráticos combate las desigualdades socioeconómicas. La presente investigación debate con esta lógica, y se posiciona bajo la idea de que las creencias meritocráticas legitiman las desigualdades socioeconómicas. Específicamente, se plantea que, a mayor percepción meritocrática, mayores serán las explicaciones que responsabilizan al individuo por su situación de pobreza o riqueza. Utilizando datos del proyecto Fondecyt N° 1160921, los resultados muestran que, a mayor percepción meritocrática, mayores son las atribuciones internas -individualistas- hacia la pobreza y la riqueza. En este sentido, mantener creencias meritocráticas legitima las desigualdades socioeconómicas mediante la responsabilización de los individuos de su propia posición en la sociedad. Para cerrar se reflexiona en torno los aportes, limitaciones y proyecciones que puede tener la investigación.
+
+\# Resumen}
+}
+
 @phdthesis{iturra_estatus_2018,
   type = {Magister En Sociología},
   title = {Estatus Social Subjetivo y Percepción de Meritocracia: El Caso de Chile},
@@ -112,7 +129,7 @@ La meritocracia constituye uno de los ideales más representativos de las socied
   abstract = {El aumento de la desigualdad económica y la concentración de la riqueza se han asociado en gran medida al resurgimiento de diferentes formas de conflicto social alrededor del mundo.},
   school = {Departamento de Sociología, Facultad de Ciencias Sociales, Universidad de Chile},
   keywords = {Guía o cotutor},
-  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: ""links: - icon: graduation-cap   icon\_pack: fa   name: Prof. Guía   web: /tag/guia-o-cotutor/ - icon: file   icon\_pack: fa   name: Documento   web: https://andreas-lafferte.github.io/tesis/resumen.html - icon: file   icon\_pack: fab   name: github   web: https://github.com/Andreas-Lafferte/tesis
+  annotation = {url\_pdf: "" url\_dataset:  "" url\_project: "" url\_slides: "" url\_video: "" url\_poster: "" links: - icon: graduation-cap   icon\_pack: fa   name: Prof. Guía   web: /tag/guia-o-cotutor/ - icon: file   icon\_pack: fa   name: Documento   web: https://andreas-lafferte.github.io/tesis/resumen.html - icon: file   icon\_pack: fab   name: github   web: https://github.com/Andreas-Lafferte/tesis
 
 ---
 
